<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp">

        <RelativeLayout
            android:id="@+id/statusSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/status"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/connection_status"
                android:src="@drawable/red_dot" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@id/btnDisconnect"
                android:layout_toEndOf="@id/status"
                android:fontFamily="@font/cairo"
                android:gravity="center_vertical"
                android:text="@string/not_connected" />

            <ImageView
                android:id="@+id/btnDisconnect"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:clickable="false"
                android:contentDescription="@string/connect"
                android:src="@drawable/disconnect"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/connectSection"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/macAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@id/btnConnect"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/cairo"
                android:hint="@string/enter_mac_address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="#CF000000" />

            <ImageView
                android:id="@+id/btnConnect"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/connect"
                android:src="@drawable/connect" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/speedControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <RelativeLayout
                    android:id="@+id/realTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@id/realTimeSwitch"
                        android:fontFamily="@font/cairo"
                        android:gravity="center_vertical"
                        android:text="@string/real_time_text"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/realTimeSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/droneMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/realTime">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@id/droneModeSwitch"
                        android:fontFamily="@font/cairo"
                        android:gravity="center_vertical"
                        android:text="@string/enable_drone_text"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/droneModeSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/cairo"
                android:gravity="center"
                android:text="@string/speed"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/seekBars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/oneSeekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/decrease"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/white_circle"
                        android:contentDescription="@string/increase_speed"
                        android:padding="2dp"
                        android:src="@drawable/minus" />

                    <SeekBar
                        android:id="@+id/speedSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_toStartOf="@id/increase"
                        android:layout_toEndOf="@id/decrease"
                        android:max="1000"
                        android:progressDrawable="@drawable/seekbar"
                        android:splitTrack="false"
                        android:thumb="@drawable/seekbar_thumb" />

                    <ImageView
                        android:id="@+id/increase"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/white_circle"
                        android:contentDescription="@string/decrease_speed"
                        android:padding="2dp"
                        android:src="@drawable/add" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fourSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/developed_by" />
</RelativeLayout>